# opentelemetry-fastapi

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  otel-config.yaml  pyproject.toml  requirements.txt  run.sh  test.py
grafana-playground/: Dockerfile  docker-compose.yaml  main.py  requirements.txt  run.sh  test.py
grafana-playground/etc/: otelcol-config.yaml  prometheus-config.yaml
otel-logging-playground/: Makefile  docker-compose.yaml  main.py  otel-config.yaml  requirements.txt
src/otel_api/: __init__.py  aws_lambda_handler.py  main.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  api_client.py
tests/unit_tests/: __init__.py  test_routes.py
