[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
files_api_cdk = ["**/*.json"]

[project]
name = "otel-api"
authors = [
    { name = "Amit Vikram Raj", email = "avr13405+cookiecut-mail@gmail.com" },
]
description = "Demo for Python Packaging"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "rest-api"]
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "fastapi",
    "httpx",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
]
dynamic = ["version"]

[project.optional-dependencies]
docker = ["gunicorn", "uvicorn"]
aws-lambda = ["mangum"]
api = ["uvicorn"]
test = ["pytest", "pytest-cov"]
release = ["build", "twine"]
static-code-qa = ["pre-commit"]
dev = ["otel-api[test,release,static-code-qa,api,docker]"]

# docs: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { file = "version.txt" }

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.black]
line-length = 119
# regular expression ignoring multiple patterns separated by '|' and newlines
exclude = '''
/(
    \.venv
  | venv
)/
'''

[tool.flake8]
docstring-convention = "all"
ignore = [
    "D107",
    "D212",
    "E501",
    "W503",
    "W605",
    "D203",
    "D100",
    "R701",
    "D401",
    # D103: Missing docstring in public function
    "D103",
    # D101: Missing docstring in public class
    "D101",
    # D102: Missing docstring in public method
    "D102",
    # D104: Missing docstring in public package
    "D104",
    # D105: Missing docstring in magic method
    "D105",
]
exclude = [".venv"]
max-line-length = 119

# radon
radon-max-cc = 10

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
    "unused-argument",
    "inconsistent-return-statements",
    "unsupported-binary-operation",
    "unsubscriptable-object",
    "missing-module-docstring",
]
